--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "server",
+	"name": "kitchen-server",
 	"private": true,
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"type": "module",
 	"main": "./index.ts",
 	"scripts": {
