--- a/server/.vscode/extensions.json
+++ b/server/.vscode/extensions.json
@@ -3,7 +3,6 @@
 		"EditorConfig.EditorConfig",
 		"dbaeumer.vscode-eslint",
 		"DavidAnson.vscode-markdownlint",
-		"Prisma.prisma",
-		"qwtel.sqlite-viewer"
+		"Prisma.prisma"
 	]
 }
