--- a/client/.oxlintrc.json
+++ b/client/.oxlintrc.json
@@ -36,7 +36,7 @@
 	"ignorePatterns": ["src/vite-env.d.ts"],
 	"overrides": [
 		{
-			"files": ["vite.config.ts"],
+			"files": ["uno.config.ts", "vite.config.ts"],
 			"rules": {
 				// Vite requires the config to be exported using default export.
 				"import/no-default-export": "off"
