--- a/client/.vscode/extensions.json
+++ b/client/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
 	"recommendations": [
+		"antfu.unocss",
 		"DavidAnson.vscode-markdownlint",
 		"EditorConfig.EditorConfig",
 		"esbenp.prettier-vscode",
