--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
 		"prettier": "3.6.2",
 		"sonda": "0.9.0",
 		"typescript": "5.8.3",
+		"unocss": "66.4.0",
 		"vite": "7.0.4",
 		"vite-plugin-solid": "2.11.7",
 		"vite-tsconfig-paths": "5.1.4"
